--- a/api/views/index.ejs
+++ b/api/views/index.ejs
@@ -3,10 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ToDo List</title>
+    <title>Document</title>
+    <script src="./script.js"></script>
 </head>
 <body>
-    <div data-title = 'my own title1' id="app"></div>
-    <script src="./bundle.js"></script>
+    <h1><%= title %></h1>
+    <script src="localhost:1300/script.js"></script>
 </body>
 </html>
