--- a/client/src/assets/style.less
+++ b/client/src/assets/style.less
@@ -5,16 +5,32 @@
     src: url('./material-icons.woff2') format('woff2');
 }
 
+@import './mixins.less';
+@import './variables.less';
+
 
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    .stop-select();
 }
 
 html, body, #app {
     height: 100%;
+    background: #ecf0f1;
+}
+
+* {
+    &::-webkit-scrollbar {
+        width: 5px;
+    }
+     
+    &::-webkit-scrollbar-thumb {
+        background: darken(@main-color, 30%);
+        border-radius: 5px;
+    }
 }
 
 
