--- a/api/views/index.ejs
+++ b/api/views/index.ejs
@@ -3,11 +3,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script src="./script.js"></script>
+    <title id="title" > doc </title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1><%= title %></h1>
-    <script src="localhost:1300/script.js"></script>
+    <!-- <script src="localhost:1300/bundle.js"></script> -->
+    <div id="app" data-title = "<%= title %>" > </div>
+    <script src="./bundle.js"></script>
+    <style>
+        #app {
+            background-image: url('./image.png');
+        }
+    </style>
 </body>
 </html>
