--- a/api/views/index.html
+++ b/api/views/index.html
@@ -3,11 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title id = 'title'>ToDo List</title>
-    <link rel="stylesheet" href="./style.css">
+    <script src="script.js"></script>
+    <title>Document</title>
 </head>
 <body>
-    <div data-title = 'my own title1' id="app"></div>
-    <script src="./bundle.js"></script>
+    <h1>hello from sent file</h1>
 </body>
 </html>
