--- a/client/src/containers/presenters/ToDoList/containers/ToDoItem/todoitem.less
+++ b/client/src/containers/presenters/ToDoList/containers/ToDoItem/todoitem.less
@@ -9,6 +9,7 @@
     min-height: 10%;
 
     margin-bottom: 15px;
+    align-items: center;
     
     &:hover {
         background: darken( @main-color, 10% );
