--- a/client/src/presenters/Button/button.less
+++ b/client/src/presenters/Button/button.less
@@ -6,10 +6,12 @@
     justify-content: center;
     align-items: center;
     margin-right: 5px;
+    position: relative;
     &__item {
         display: flex;
         justify-content: center;
         align-items: center;
+
         background: @color-blue;
         width: 45px;
         height: 45px;
@@ -19,6 +21,34 @@
         .material-icons {
             color: @main-color;
         }
+        &:hover + .tooltip {
+            display: block;
+            position: absolute;
+            background: @color-almost-black;
+            color: @main-color;
+            text-transform: capitalize;
+            padding: 7px;
+            border-radius: 5px;
+            white-space: nowrap;
+            &.top { 
+                bottom: 105%;
+            }
+            &.bottom {
+                top : 105%;
+            }
+            &.right {
+                left : 105%;
+            }
+            &.left {
+                right : 105%;
+            }
+            &.none { 
+                display: none;
+            }
+        }
+
+
+
         &.red {
             background: darken(@color-red, 10%);
             &:hover {
@@ -32,5 +62,8 @@
         &:active {
             transform: scale(0.95);
         }
+    }
+    .tooltip {
+        display: none;
     }
 }
